# travel-movie-ai

./: .env.example  .gitignore  AGENTS.md  README.md  TECHNICAL_SPECIFICATION.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: settings.toml
docs/: TECHNICAL_SPECIFICATION.md  architecture.md  installation-and-usage.md  roadmap.md
installer/: TravelMovieAI.iss  travelmovieai.spec
scripts/: benchmark_metadata_scale.py  build_windows_installer.ps1  run_web.bat  setup_music_ai.bat  setup_windows.bat
src/travelmovieai/: __init__.py  __main__.py  cli.py  desktop.py
src/travelmovieai/analysis/: __init__.py  audio.py  duplicates.py  embeddings.py  quality.py  scenes.py  speech.py  vision.py
src/travelmovieai/application/: cache.py  context.py  diagnostics.py  disk_space.py  project_archive.py  reporting.py  resource_estimates.py  scale_benchmark.py  semantic_search.py  service.py  validation.py  variants.py  workspace_identity.py  workspace_lease.py
src/travelmovieai/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
src/travelmovieai/domain/: __init__.py  enums.py  manual_editing.py  models.py
src/travelmovieai/editing/: __init__.py  narration_audio.py  publication.py  quality_report.py  renderer.py  timeline.py
src/travelmovieai/infrastructure/: __init__.py  ace_step_worker.py  artifacts.py  database.py  directory_dialog.py  embeddings.py  ffmpeg.py  lm_studio.py  model_pool.py  music_generation.py  processes.py  providers.py  semantic_index.py  story.py  system.py  vision.py  voice.py  whisper.py
src/travelmovieai/media/: __init__.py  proxy.py  scanner.py
src/travelmovieai/pipeline/: base.py  progress.py  registry.py  runner.py  state.py
src/travelmovieai/pipeline/stages/: __init__.py  audio_analysis.py  duplicate_detection.py  embeddings.py  event_detection.py  frame_sampling.py  media_scan.py  music_selection.py  narration.py  placeholders.py  quality_analysis.py  rendering.py  scene_detection.py  scene_ranking.py  speech_analysis.py  story_builder.py  storyboard.py  timeline_builder.py  vision_analysis.py  voice_synthesis.py
src/travelmovieai/story/: __init__.py  builder.py  editorial.py  events.py  music.py  narration.py  optimizer.py  ranking.py
src/travelmovieai/web/: __init__.py  app.py  jobs.py  movie_jobs.py  schemas.py  server.py  state.py
src/travelmovieai/web/static/: app.js  index.html  styles.css
tests/: test_analysis_proxy.py  test_audio_analysis.py  test_cache_cleanup.py  test_cache_determinism.py  test_cli.py  test_config.py  test_context.py  test_database.py  test_desktop.py  test_diagnostics.py  test_disk_space.py  test_domain_model_validation.py  test_duplicates_and_selection.py  test_embedding_provider.py  test_embeddings.py  test_event_detection_stage.py  test_ffprobe.py  test_frame_extraction.py  test_installer_contract.py  test_logging.py  test_manual_editing.py  test_media_scan_stage.py  test_media_scanner.py  test_model_pool.py  test_montage_quality_report.py  test_music_generation.py  test_pipeline.py  test_processes.py  test_project_archive.py  test_provider_registry.py  test_quality_and_music.py  test_quick_montage.py  test_render_features.py  test_reporting.py  test_resource_estimates.py  test_scale_benchmark.py  test_scene_detection_parallel.py  test_security.py  test_selection_pipeline_stages.py  test_semantic_index.py  (+15 more)
