[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "travelmovieai"
version = "0.1.0"
description = "Local-first AI pipeline that turns travel media into a story-driven movie."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "TravelMovieAI contributors" },
]
dependencies = [
  "pillow>=11,<12",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
video = [
  "opencv-python>=4.10,<5",
  "scenedetect[opencv]>=0.6.5,<1",
]
speech = [
  "faster-whisper>=1.1,<2",
]
vision = [
  "transformers>=4.48,<5",
]
embeddings = [
  "faiss-cpu>=1.9,<2",
  "sentence-transformers>=3.4,<4",
]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]
all = [
  "faiss-cpu>=1.9,<2",
  "faster-whisper>=1.1,<2",
  "opencv-python>=4.10,<5",
  "scenedetect[opencv]>=0.6.5,<1",
  "sentence-transformers>=3.4,<4",
  "transformers>=4.48,<5",
]

[project.scripts]
travelmovieai = "travelmovieai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/travelmovieai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["travelmovieai"]
