[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "travelmovieai"
version = "0.1.0"
description = "Local-first AI pipeline that turns travel media into a story-driven movie."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "TravelMovieAI contributors" },
]
dependencies = [
  "fastapi>=0.115,<1",
  "pillow>=11,<12",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
video = [
  "opencv-python>=4.10,<5",
  "scenedetect>=0.6.5,<1",
]
speech = [
  "faster-whisper>=1.1,<2",
]
vision = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.46,<1",
  "huggingface-hub>=0.27,<1",
  "json-repair>=0.44,<1",
  "safetensors>=0.4,<1",
  "torch>=2.5,<3",
  "transformers>=4.48,<5",
]
embeddings = [
  "faiss-cpu>=1.9,<2",
  "sentence-transformers>=3.4,<4",
]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]
all = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.46,<1",
  "faiss-cpu>=1.9,<2",
  "faster-whisper>=1.1,<2",
  "huggingface-hub>=0.27,<1",
  "json-repair>=0.44,<1",
  "opencv-python>=4.10,<5",
  "safetensors>=0.4,<1",
  "scenedetect>=0.6.5,<1",
  "sentence-transformers>=3.4,<4",
  "torch>=2.5,<3",
  "transformers>=4.48,<5",
]

[project.scripts]
travelmovieai = "travelmovieai.cli:app"
travelmovieai-web = "travelmovieai.web.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/travelmovieai"]

[tool.hatch.build]
include = [
  "src/travelmovieai/**/*.py",
  "src/travelmovieai/py.typed",
  "src/travelmovieai/web/static/*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["travelmovieai"]
